--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "watch": {
+     "build": "src/*.js"
+  },
   "scripts": {
     "sass:core": "node-sass src/sass/coaster.scss dist/css/coaster.css --output-style=compressed",
     "build:css": "npm run sass:core",
@@ -18,7 +21,8 @@
     "build:js": "npm run build:esm && npm run build:umd",
     "build": "npm run build:css && npm run build:js",
     "test": "jest tests/**/*.test.js",
-    "lint": "eslint {src,tests}/**/*.js"
+    "lint": "eslint {src,tests}/**/*.js",
+    "watch": "npm-watch build"
   },
   "keywords": [
     "carousel",
@@ -30,26 +34,28 @@
   "author": "Simon Mundy <simon.mundy@peptolab.com> (https://www.peptolab.com)",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-external-helpers": "^7.12.1",
-    "@babel/plugin-transform-object-assign": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@rollup/plugin-babel": "^5.2.2",
-    "eslint": "^7.15.0",
+    "@babel/core": "^7.12.17",
+    "@babel/plugin-external-helpers": "^7.12.13",
+    "@babel/plugin-transform-object-assign": "^7.12.13",
+    "@babel/preset-env": "^7.12.17",
+    "@rollup/plugin-babel": "^5.3.0",
+    "eslint": "^7.20.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
-    "rollup": "^2.34.2",
+    "rollup": "^2.39.0",
     "rollup-plugin-terser": "^7.0.2",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.11.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-scss": "^3.18.0"
+    "stylelint-scss": "^3.19.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "npm-watch": "^0.7.0"
+  },
   "bugs": {
     "url": "https://github.com/peptolab/glide/issues"
   },
